--- a/lesson1.html
+++ b/lesson1.html
@@ -150,7 +150,7 @@
             </div>
         </section>
         <section class="container">
-            <h1>State</h1>
+            <h1>State &amp; Events</h1>
             <div class="row">
                 <div class="col-sm-4">
                     <ul>
