add sanbox notes

--- a/lesson1.html
+++ b/lesson1.html
@@ -16,11 +16,6 @@
         <script type="text/plain" id="jsxTanslatedSyntaxSource">
           React.DOM.tagname(properties, children)
         </script>
-        <script type="text/plain" id="defineTagSource">
-          /** @jsx React.DOM */
-          var UberTag = React.createClass({});
-          var uberInstance = <UberTag/>;
-        </script>
         <script type="text/jsx" id="defineRenderSource">
           /** @jsx React.DOM */
           var UberTag = React.createClass({
@@ -84,6 +79,16 @@
         </script>
     </head>
     <body>
+        <section class="container">
+            <h1>Your Sanbox</h1>
+            <div class="row">
+                <div class="col-sm-12">
+                <p>
+                    Most of the code on the pages is live editable. An explanation for how the code viewer works is at the end of lesson 2. "basic.html" has been created for you so that you can experiment in creating your own components in an environment that is already setup.
+                </p>
+                </div>
+            </div>
+        </section>
         <section class="container">
             <h1>Application as a hierarchy of components</h1>
             <div class="row">
