short blurb about renderComponent

--- a/lesson1.html
+++ b/lesson1.html
@@ -84,7 +84,8 @@
             <div class="row">
                 <div class="col-sm-12">
                 <p>
-                    Most of the code on the pages is live editable. An explanation for how the code viewer works is at the end of lesson 2. "basic.html" has been created for you so that you can experiment in creating your own components in an environment that is already setup.
+                    Most of the code on the pages is live editable. An explanation for how the code viewer works is at the end of lesson 2.
+                    <a href="./basic.html">basic.html</a> has been created for you so that you can experiment in creating your own components in an environment that is already setup.
                 </p>
                 </div>
             </div>
@@ -127,7 +128,7 @@
                 <div class="col-sm-12">
                 <h2>JSX Syntax</h2>
                 <p>
-                    React JSX is transpiled to Javascript. This allows for mixing html and javascript syntax. 
+                    React JSX is transpiled to Javascript. This allows for mixing html and javascript syntax.
                 </p>
                 </div>
             </div>
@@ -148,6 +149,7 @@
                         <li>Brackets ("{}") are used to evaluate javascript within the tags.</li>
                         <li>The attributes of a tag are mapped to as props for the component state</li>
                         <li>The contents are mapped to the props.children for the component state</li>
+                        <li>React.renderComponent mounts a given component inside a DOM element</li>
                     </ul>
                     <div class="result" id="defineRender"></div>
                 </div>
