added buttom lesson nav

--- a/lesson3.html
+++ b/lesson3.html
@@ -361,5 +361,13 @@
                 </div>
             </div>
         </section>
+        <div class="footer">
+        <ul class="pagination">
+            <li><a href="lesson2.html">&laquo;</a></li>
+            <li><a href="lesson1.html">Lesson 1</a></li>
+            <li><a href="lesson2.html">Lesson 2</a></li>
+            <li class="active"><a href="lesson3.html">Lesson 3</a></li>
+        </ul>
+        </div>
     </body>
 </html>
