--- a/lesson1.html
+++ b/lesson1.html
@@ -191,5 +191,13 @@
                 </div>
             </div>
         </section>
+        <div class="footer">
+        <ul class="pagination">
+            <li class="active"><a href="lesson1.html">Lesson 1</a></li>
+            <li><a href="lesson2.html">Lesson 2</a></li>
+            <li><a href="lesson3.html">Lesson 3</a></li>
+            <li><a href="lesson2.html">&raquo;</a></li>
+        </ul>
+        </div>
     </body>
 </html>
