added lesson 4, code samples to follow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <section class="container">
             <h1>Lessons</h1>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                 <p>
                     <a href="lesson1.html">Lesson 1</a>
                     <ul>
@@ -20,7 +20,7 @@
                     </ul>
                 </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                 <p>
                     <a href="lesson2.html">Lesson 2</a>
                     <ul>
@@ -31,12 +31,22 @@
                     </ul>
                 </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                 <p>
                     <a href="lesson3.html">Lesson 3</a>
                     <ul>
                         <li>Messages</li>
                         <li>Models</li>
+                    </ul>
+                </p>
+                </div>
+                <div class="col-sm-3">
+                <p>
+                    <a href="lesson4.html">Lesson 4 (incomplete)</a>
+                    <ul>
+                        <li>Contracts</li>
+                        <li>Components as Contracts</li>
+                        <li>Components as Stories</li>
                     </ul>
                 </p>
                 </div>
