--- a/lesson2.html
+++ b/lesson2.html
@@ -294,12 +294,13 @@ var SourceCode = React.createClass({
                 </div>
             </div>
         </section>
-        <div class="footer">
+        <div class="footer container">
         <ul class="pagination">
             <li><a href="lesson1.html">&laquo;</a></li>
             <li><a href="lesson1.html">Lesson 1</a></li>
             <li class="active"><a href="lesson2.html">Lesson 2</a></li>
             <li><a href="lesson3.html">Lesson 3</a></li>
+            <li><a href="lesson4.html">Lesson 4</a></li>
             <li><a href="lesson3.html">&raquo;</a></li>
         </ul>
         </div>
